토큰구조 변경